# DMM-enigma2-plugin-vlcplayer

./: configure.ac
src/servicets/: Makefile.am  servicets.cpp
